--- a/planes.css
+++ b/planes.css
@@ -203,3 +203,25 @@ ul li #inicia:hover {
         display: flex;
     }
 }
+.footer {
+    background-color: #222;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.footer .social-links {
+    margin-top: 10px;
+}
+
+.footer .social-links a {
+    color: #fff;
+    margin: 0 10px;
+    font-size: 1.5rem; /* Tamaño de íconos o texto */
+    transition: color 0.3s ease;
+    text-decoration: none;
+}
+
+.footer .social-links a:hover {
+    color: #00aced; /* Azul claro al pasar el mouse */
+}
